k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend-deployment
  labels:
    app:  frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image:  frontend
        imagePullPolicy: IfNotPresent
        name:  frontend-container
        resources:
          requests:
            cpu: "250m"
            memory: "128M"
          limits:
            cpu: "500m"
            memory: "256M"
        livenessProbe:
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  5173
          name:  frontend-http
