k8s/mongo-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  type: ClusterIP
  ports:
  - name: mongo-port
    port: 27017
    targetPort: 27017
