k8s/redis-service.yml
kind: Service
apiVersion: v1
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - name: redis-port
    port: 6379
    targetPort: 6379
