k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildable-ingress
  annotations:
    # Time in seconds to wait for a response from the pod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
    
    # Time in seconds to wait for data to be sent to the pod
    nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
    
    # Time in seconds to establish a connection to the pod
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"

    
    # Session affinity: route same client to same backend pod using a cookie
    # Ensures WebSocket / stateful connections don't switch pods mid-session
    nginx.ingress.kubernetes.io/affinity: "cookie"

    # Name of the sticky session cookie sent to the client
    nginx.ingress.kubernetes.io/session-cookie-name: "route"

      # Cookie is valid for all paths under the domain
    nginx.ingress.kubernetes.io/session-cookie-path: "/"

    #Enable CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"

    # Allow requests from our domain
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://www.cryboy.in"

    # Allow cookies to be sent
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # Allow cookies to be sent
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"

  labels:
    app.kubernetes.io/name: buildable-ingress
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/api/sandbox"
        backend:
          service:
            name: sandbox-service
            port:
              number: 80

   - http:
      paths:
      - pathType: Prefix
        path: "/api/ai"
        backend:
          service:
            name: ai-service
            port:
              number: 80
   
   - http:
      paths:
      - pathType: Prefix
        path: "/api/auth"
        backend:
          service:
            name: auth-service
            port: 
              number: 80   
              
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80

   - host: "*.preview.localhost"
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router-service
            port:
              number: 80

   - host: "*.agent.localhost"
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router-service
            port:
              number: 80
